<resources>

    <string name="app_name">TokoPhincon</string>

    <!-- Onboarding -->
    <string name="button_join_now">Gabung Sekarang</string>
    <string name="button_skip">Lewati</string>
    <string name="button_next">Selanjutnya</string>

    <!-- Login and Register-->
    <string name="hint_email">Email</string>
    <string name="helper_email">Contoh: test@gmail.com</string>
    <string name="error_email">Email tidak valid</string>
    <string name="hint_password">Password</string>
    <string name="helper_password">Minimal 8 karakter</string>
    <string name="error_password">Password tidak valid</string>
    <string name="button_login">Masuk</string>
    <string name="button_register">Daftar</string>
    <string name="terms">Syarat &amp; Ketentuan</string>
    <string name="conditions">Kebijakan Privasi</string>

    <!-- Login -->
    <string name="text_login">Masuk</string>
    <string name="text_another_register">atau daftar dengan</string>
    <string name="terms_and_conditions_login">Dengan masuk disini, kamu menyetujui Syarat &amp; Ketentuan serta Kebijakan Privasi TokoPhincon.</string>

    <!-- Register -->
    <string name="text_register">Daftar</string>
    <string name="text_another_login">atau masuk dengan</string>
    <string name="terms_and_conditions_register">Dengan daftar disini, kamu menyetujui Syarat &amp; Ketentuan serta Kebijakan Privasi TokoPhincon.</string>

    <!-- Profile -->
    <string name="text_profile">Profil</string>
    <string name="hint_name">Nama</string>
    <string name="button_submit">Selesai</string>
    <string name="text_choose_image">Pilih Gambar</string>
    <string name="text_camera">Kamera</string>
    <string name="text_gallery">Galeri</string>

    <!-- Store -->
    <string name="hint_search">Search</string>
    <string name="chip_filter">Filter</string>
    <string name="price_format">Rp%s</string>
    <string name="rating_format" formatted="false">%s | Terjual %s</string>

    <!-- Filter -->
    <string name="text_filter">Filter</string>
    <string name="button_reset">Reset</string>
    <string name="text_sort">Urutkan</string>
    <string name="text_rating">Ulasan</string>
    <string name="text_sale">Penjualan</string>
    <string name="text_lowest_price">Harga terendah</string>
    <string name="text_highest_price">Harga tertinggi</string>
    <string name="text_category">Kategory</string>
    <string name="apple">Apple</string>
    <string name="asus">Asus</string>
    <string name="dell">Dell</string>
    <string name="lenovo">Lenovo</string>
    <string name="text_price">Harga</string>
    <string name="hint_lowest">Terendah</string>
    <string name="hint_highest">Tertinggi</string>
    <string name="button_show_product">Tampilkan Produk</string>

    <!-- Error -->
    <string name="text_empty_title">Kosong</string>
    <string name="text_empty_description">Data yang anda minta tidak tersedia</string>
    <string name="text_connection_title">Koneksi</string>
    <string name="text_connection_description">Koneksi anda tidak tersedia</string>
    <string name="text_error_title">Kesalahan</string>
    <string name="text_error_description">Sepertinya ada yang tidak beres</string>
    <string name="button_refresh">Refresh</string>

    <!-- Top App Bar-->
    <string name="notification">Notification</string>
    <string name="cart">Cart</string>
    <string name="menu">Menu</string>

    <!-- Bottom Navigation -->
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="wishlist">Wishlist</string>
    <string name="transaction">Transaction</string>

    <!-- Main -->
    <string name="text_kick_out">Akun Anda telah keluar, silakan masuk kembali</string>

    <!-- Detail Product-->
    <string name="choose_variant">Pilih Variant</string>
    <string name="buyer_review">Ulasan Pembeli</string>
    <string name="product_description">Deskripsi Produk</string>
    <string name="btn_view_all_review">Lihat Semua</string>
    <string name="btn_buy_directly">Beli Langsung</string>
    <string name="btn_add_to_cart">+ Keranjang</string>

    <!-- cart -->
    <string name="tv_total_payment">Total Pembayaran</string>
    <string name="btn_buy">Beli</string>
    <string name="select_all">Pilih Semua</string>

    <!-- checkout   -->
    <string name="tv_purchased">Barang yang dibeli</string>
    <string name="payment">Pembayaran</string>
    <string name="chosse_payment">Pilih pembayaran</string>
    <string name="pay">Bayar</string>

    <!--  status  -->
    <string name="payment_success">Pembayaran Berhasil</string>
    <string name="give_review">Beri ulasan</string>
    <string name="detail_transaction">Detail Transaksi</string>
    <string name="id_transaction">ID Transaksi</string>
    <string name="status">Status</string>
    <string name="date">Tanggal</string>
    <string name="time">Waktu</string>
    <string name="pay_method">Metode Pembayaran</string>
    <string name="done">selesai</string>

    <!--  Transaction  -->
    <string name="shopping">Belanja</string>
    <string name="review">Ulas</string>
    <string name="total_spending">Total Belanja</string>

    <!-- FCM  -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="msg_subscribed" translatable="false">Subscribed to promo topic</string>
    <string name="msg_subscribe_failed" translatable="false">Failed to subscribe to promo topic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>