<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_radius"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/tv_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:text="@string/chip_filter"
        android:textColor="@color/text_content"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/white"
        android:text="@string/button_reset"
        android:textColor="@color/indicator_filled"
        app:layout_constraintBottom_toBottomOf="@+id/tv_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_filter" />

    <TextView
        android:id="@+id/tv_ordered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/text_sort"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_filter"
        app:layout_constraintTop_toBottomOf="@+id/tv_filter" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_ordered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/btn_reset"
        app:layout_constraintStart_toStartOf="@+id/tv_filter"
        app:layout_constraintTop_toBottomOf="@+id/tv_ordered">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_ordered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_ulasan"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/text_rating"
                app:chipBackgroundColor="@color/bg_chip_state"
                app:chipStrokeWidth="2dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_penjualan"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/text_sale"
                app:chipBackgroundColor="@color/bg_chip_state"
                app:chipStrokeWidth="2dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_harga_terendah"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/text_lowest_price"
                app:chipBackgroundColor="@color/bg_chip_state"
                app:chipStrokeWidth="2dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_harga_tertinggi"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="@string/text_highest_price"
                app:chipBackgroundColor="@color/bg_chip_state"
                app:chipStrokeWidth="2dp" />
        </com.google.android.material.chip.ChipGroup>


    </androidx.appcompat.widget.LinearLayoutCompat>


    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_category"
        app:layout_constraintStart_toStartOf="@+id/container_ordered"
        app:layout_constraintTop_toBottomOf="@+id/container_ordered" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/container_ordered"
        app:layout_constraintStart_toStartOf="@+id/tv_category"
        app:layout_constraintTop_toBottomOf="@+id/tv_category">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_category_1"
            style="@style/Widget.Material3.ChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_asus"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="@string/asus"
                app:chipBackgroundColor="@color/bg_chip_state"
                app:chipStrokeWidth="2dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_lenovo"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="@string/lenovo"
                app:chipBackgroundColor="@color/bg_chip_state"
                app:chipStrokeWidth="2dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_apple"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="@string/apple"
                app:chipBackgroundColor="@color/bg_chip_state"
                app:chipStrokeWidth="2dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_dell"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="@string/dell"
                app:chipBackgroundColor="@color/bg_chip_state"
                app:chipStrokeWidth="2dp" />

        </com.google.android.material.chip.ChipGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_price"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/container_category"
        app:layout_constraintTop_toBottomOf="@+id/container_category" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_filtet_harga"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/container_category"
        app:layout_constraintStart_toStartOf="@+id/tv_harga"
        app:layout_constraintTop_toBottomOf="@+id/tv_harga">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_terendah"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_terendah"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:hint="@string/hint_lowest"
                android:inputType="number"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_tetinggi"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tertinggi"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_highest"
                android:inputType="number"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_show_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/button_color"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/button_show_product"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="@+id/container_filtet_harga"
        app:layout_constraintStart_toStartOf="@+id/container_filtet_harga"
        app:layout_constraintTop_toBottomOf="@+id/container_filtet_harga" />

</androidx.constraintlayout.widget.ConstraintLayout>



