<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_title_register"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/button_register"
            android:textColor="@color/black"
            android:textSize="28sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_title_register">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/hint_email"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_email_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/error_email"
        android:textColor="@color/text_error"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/text_input_layout_email"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/text_input_layout_email"
        app:layout_constraintStart_toStartOf="@+id/text_input_layout_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_error">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/error_password"
        android:textColor="@color/text_error"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/text_input_layout_password"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_daftar_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_filled"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:text="@string/button_register"
        android:textAllCaps="false"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="@+id/text_input_layout_password"
        app:layout_constraintStart_toStartOf="@+id/text_input_layout_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_message" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_divider"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/btn_daftar_register"
        app:layout_constraintStart_toStartOf="@+id/btn_daftar_register"
        app:layout_constraintTop_toBottomOf="@+id/btn_daftar_register">

        <View
            android:id="@+id/view_start"
            android:layout_width="99dp"
            android:layout_height="2dp"
            android:layout_marginEnd="8dp"
            android:background="@color/grey_divider" />

        <TextView
            android:id="@+id/tv_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:text="@string/text_another_login" />

        <View
            android:id="@+id/view_end"
            android:layout_width="99dp"
            android:layout_height="2dp"
            android:background="@color/grey_divider" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_masuk_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:text="@string/button_login"
        android:textAllCaps="false"
        android:textColor="@color/indicator_filled"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_daftar_register"
        app:layout_constraintStart_toStartOf="@+id/btn_daftar_register"
        app:layout_constraintTop_toBottomOf="@+id/container_divider" />

    <TextView
        android:id="@+id/tv_terms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_masuk_register"
        app:layout_constraintStart_toStartOf="@+id/btn_masuk_register"
        app:layout_constraintTop_toBottomOf="@+id/btn_masuk_register"
        tools:text="@string/terms_and_conditions_register" />

    <ProgressBar
        android:id="@+id/pb_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>