<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rizkysiregar.ecommerce.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.rizkysiregar.ecommerce.ui.search.SearchFragment"
        android:label="@string/hint_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_navigation_search_to_navigation_store"
            app:destination="@id/navigation_store">

        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_store"
        android:name="com.rizkysiregar.ecommerce.ui.store.StoreFragment"
        android:label="@string/store"
        tools:layout="@layout/fragment_store">

        <argument
            android:name="filter"
            app:argType="string[]" />
        <action
            android:id="@+id/action_navigation_store_to_navigation_search"
            app:destination="@id/navigation_search" />
        <action
            android:id="@+id/action_navigation_store_to_modelBottomSheet"
            app:destination="@id/modelBottomSheet" />
        <action
            android:id="@+id/action_navigation_store_to_navigation_detail"
            app:destination="@id/navigation_detail" />

    </fragment>

    <fragment
        android:id="@+id/navigation_wishlist"
        android:name="com.rizkysiregar.ecommerce.ui.wishlist.WishlistFragment"
        android:label="@string/wishlist"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.rizkysiregar.ecommerce.ui.transaction.TransactionFragment"
        android:label="@string/transaction"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.rizkysiregar.ecommerce.ui.detail.DetailFragment"
        android:label="detail"
        tools:layout="@layout/fragment_detail">
        <action
            android:id="@+id/action_navigation_detail_to_navigation_review"
            app:destination="@id/navigation_review" />
    </fragment>

    <fragment
        android:id="@+id/navigation_review"
        android:name="com.rizkysiregar.ecommerce.ui.review.ReviewFragment"
        android:label="review"
        tools:layout="@layout/fragment_review" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.rizkysiregar.ecommerce.ui.cart.CartFragment"
        android:label="Cart"
        tools:layout="@layout/fragment_cart">

        <action
            android:id="@+id/action_navigation_cart_to_checkout"
            app:destination="@id/navigation_checkout"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_status"
        android:name="com.rizkysiregar.ecommerce.ui.status.StatusFragment"
        android:label="Status"
        tools:layout="@layout/fragment_status" >
        <argument
            android:name="statusTransaction"
            app:argType="com.rizkysiregar.ecommerce.data.network.response.FulFillmentResponse" />
        <action
            android:id="@+id/action_navigation_status_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_payment"
        android:name="com.rizkysiregar.ecommerce.ui.payment.PaymentFragment"
        android:label="payment"
        tools:layout="@layout/fragment_payment" />

    <fragment
        android:id="@+id/navigation_checkout"
        android:name="com.rizkysiregar.ecommerce.ui.checkout.CheckoutFragment"
        android:label="checkout"
        tools:layout="@layout/fragment_checkout">
        <argument
            android:name="selectedProducts"
            app:argType="com.rizkysiregar.ecommerce.data.network.response.ListSelectedProducts" />
        <action
            android:id="@+id/action_navigation_checkout_to_navigation_payment"
            app:destination="@id/navigation_payment" />
        <action
            android:id="@+id/action_navigation_checkout_to_navigation_status"
            app:destination="@id/navigation_status" />
    </fragment>

    <dialog
        android:id="@+id/modelBottomSheet"
        android:name="com.rizkysiregar.ecommerce.ui.store.ModelBottomSheet"
        android:label="ModelBottomSheet"
        tools:layout="@layout/modal_bottom_sheet_content">
        <action
            android:id="@+id/action_modelBottomSheet_to_navigation_store"
            app:destination="@id/navigation_store" />
    </dialog>


</navigation>